<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Controller.AdminProductActivity">

    <!--    private CategoryFDTO category;-->
    <!--    private String thumbnail;-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/label"
            android:hint="@string/product_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_name_input"
                style="@style/input"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/label"
            android:hint="@string/product_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_description_input"
                style="@style/input"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/label"
            android:hint="@string/product_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_price_input"
                style="@style/input"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/label"
            android:hint="@string/product_stock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_stock_input"
                style="@style/input"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/add_product_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/dark_gray"
        android:text="@string/add_to_cart" />

</RelativeLayout>