<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Controller.StorePrctDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_back"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/label"
            android:hint="@string/product_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_name_input"
                style="@style/input"
                android:enabled="false"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/label"
            android:hint="@string/product_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_description_input"
                style="@style/input"
                android:enabled="false"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price_layout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/product_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_price_input"
                    style="@style/input"
                    android:enabled="false"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/price_layout"
                android:hint="@string/product_stock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_stock_input"
                    style="@style/input"
                    android:enabled="false"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_category">

            <AutoCompleteTextView
                android:id="@+id/product_category_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:inputType="none"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageButton
                android:id="@+id/upload_image_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/upload_image"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/confirm_upload_image_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/upload_image_btn"
                android:src="@drawable/check_icon"
                android:visibility="gone"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/preview_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true" />

    </LinearLayout>

    <Button
        android:id="@+id/edit_product_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/dark_gray"
        android:text="@string/edit_product" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/update_layout"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:id="@+id/cancel_update_btn"
            android:textColor="@color/black"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:backgroundTint="#DEDEDE"
            android:layout_marginEnd="10dp"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/update_product_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_gray"
            android:text="@string/update_product"/>
    </LinearLayout>

</RelativeLayout>