<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="10dp">

    <ImageButton
        android:id="@+id/back"
        style="@style/bar_component"
        android:contentDescription="@string/back"
        android:src="@drawable/arrow_back" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        >

        <ImageButton
            android:id="@+id/cart"
            style="@style/bar_component"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@drawable/cart" />

        <TextView
            android:id="@+id/cart_badge"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end|top"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="-10dp"
            android:background="@drawable/badge_background"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:visibility="gone"
            tools:text="3"
            tools:visibility="visible" />
    </FrameLayout>

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/thumbnail_content_des"
        android:src="@drawable/thumb" />

    <TextView
        android:id="@+id/label"
        style="@style/detail_text_view"
        android:layout_below="@+id/thumbnail"
        android:fontFamily="sans-serif-medium"
        android:text="STV-380"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/price"
        style="@style/detail_text_view"
        android:layout_below="@+id/thumbnail"
        android:layout_alignParentEnd="true"
        android:text="200 USD"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/category"
        style="@style/detail_text_view"
        android:layout_below="@+id/price"
        android:layout_marginTop="10dp"
        android:text="Rifle"
        android:textColor="#8E8E8E" />

    <TextView
        android:id="@+id/des"
        style="@style/detail_text_view"
        android:layout_below="@+id/category"
        android:layout_marginTop="15dp"
        android:text="@string/des" />

    <TextView
        android:id="@+id/store"
        style="@style/detail_text_view"
        android:layout_below="@+id/des"
        android:layout_marginTop="10dp"
        android:text="Store: SS0" />

    <ImageButton
        android:id="@+id/contact_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/des"
        android:layout_toEndOf="@+id/store"
        android:src="@drawable/chat_icon"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:padding="5dp">

        <Button
            android:id="@+id/add_to_cart_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/dark_gray"
            android:text="@string/add_to_cart" />

        <TextView
            android:id="@+id/cart_notice"
            style="@style/detail_text_view"
            android:layout_marginTop="15dp"
            android:text="Added to cart"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>