<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/home_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:src="@drawable/home_icon" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp">

                <ImageButton
                    android:id="@+id/cart"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:src="@drawable/cart" />

                <TextView
                    android:id="@+id/cart_badge"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end|top"
                    android:layout_marginTop="-10dp"
                    android:layout_marginEnd="-10dp"
                    android:background="@drawable/badge_background"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:visibility="gone"
                    tools:text="3"
                    tools:visibility="visible" />
            </FrameLayout>

            <EditText
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/search"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="50dp" />

            <ImageButton
                android:id="@+id/filter_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/baseline_filter_alt_24" />

            <ImageButton
                android:id="@+id/sort_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/sort_icon" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/explore"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/trending"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/product_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingTop="10dp" >

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

